Divide statistics in the number of packets with 1000 instead of 1024 in human-readable form.

PR:	183598